test: keep ops DTO test Java 17 compatible